# cnc-iot-ia

./: .gitignore  Makefile  README.md
Esp32/: captura_datos.py  pyproject.toml
Esp32/cnc_iot_esp32/: cnc_iot_esp32.ino
data/: .gitkeep  anomalia.csv  operacion_normal.csv  reposo.csv
firmware/inference/: cnc_mlp_demo.ino  cnc_mlp_inference.ino  mlp_inference.h  model_weights.h  scaler_params.h
firmware/inference/cnc_mlp_demo/: cnc_mlp_demo.ino  model.h  scaler_params.h  test_data.h
firmware/inference/cnc_mlp_inference/: cnc_mlp_inference.ino
model/: count_data.py  data_counts.json  dataset_balanced.csv  export_weights.py  mlp_model.keras  model.tflite  preprocess.py  pyproject.toml  report.txt  requirements.txt  scaler.pkl  test.csv  test_predictions_tflite.csv  train.csv  train_mlp.py  training_history.json  val.csv  validate.py
