[project]
name = "cnc-mlp"
version = "0.1.0"
description = "FLUX CNC IoT - MLP Pipeline"
requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.13",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.15",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "kaleido>=0.2",
]
